--- a/takkat/package.json
+++ b/takkat/package.json
@@ -3,28 +3,101 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.2.4",
+    "@chakra-ui/react": "^2.10.5",
+    "@emailjs/browser": "^4.4.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@google/generative-ai": "^0.21.0",
+    "@heroui/react": "^2.6.14",
+    "@iconify-icons/mdi": "^1.2.48",
+    "@iconify-icons/solar": "^1.2.3",
+    "@iconify/icons-mdi": "^1.2.48",
+    "@iconify/react": "^5.1.0",
     "@nextui-org/react": "^2.6.11",
-    "framer-motion": "^12.4.5",
-    "next": "15.1.7",
+    "@nextui-org/spinner": "^2.0.34",
+    "@nextui-org/system": "^2.2.6",
+    "@nextui-org/theme": "^2.2.11",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-collapsible": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-navigation-menu": "^1.2.5",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-radio-group": "^1.2.3",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.1.6",
+    "@reduxjs/toolkit": "^2.5.1",
+    "@shadcn/ui": "^0.0.4",
+    "@tensorflow-models/mobilenet": "^2.1.1",
+    "@tensorflow/tfjs": "^4.22.0",
+    "ai": "^4.0.24",
+    "autoprefixer": "^10.4.20",
+    "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
+    "embla-carousel-autoplay": "^8.3.0",
+    "embla-carousel-react": "^8.3.0",
+    "firebase": "^10.14.1",
+    "firebase-admin": "^13.1.0",
+    "framer-motion": "^11.18.2",
+    "gemini-api": "^2.0.4",
+    "lucide-react": "^0.469.0",
+    "next": "^15.1.7",
+    "next-themes": "^0.4.4",
+    "nodemailer": "^6.10.0",
+    "openai": "^4.77.4",
     "react": "^19.0.0",
+    "react-big-calendar": "^1.17.1",
+    "react-bootstrap": "^2.10.5",
+    "react-canvas-confetti": "^2.0.7",
+    "react-colorful": "^5.6.1",
     "react-dom": "^19.0.0",
-    "tailwindcss-animate": "^1.0.7"
+    "react-dropzone": "^14.3.5",
+    "react-firebase-hooks": "^5.1.1",
+    "react-hot-toast": "^2.5.1",
+    "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
+    "react-responsive": "^10.0.0",
+    "react-slick": "^0.30.2",
+    "react-toastify": "^11.0.3",
+    "recharts": "^2.13.0",
+    "script": "^0.1.4",
+    "scripts": "^0.1.0",
+    "slick-carousel": "^1.8.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "swiper": "^11.2.2",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "@types/date-fns": "^2.5.3",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.7",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@types/nodemailer": "^6.4.17",
+    "@types/react": "^18",
+    "@types/react-big-calendar": "^1.16.0",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.15",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
     "typescript": "^5"
   }
 }
