--- a/takkat/package.json
+++ b/takkat/package.json
@@ -38,6 +38,8 @@
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@react-email/components": "^0.0.33",
+    "@react-email/render": "^1.0.5",
     "@reduxjs/toolkit": "^2.5.1",
     "@shadcn/ui": "^0.0.4",
     "@tensorflow-models/mobilenet": "^2.1.1",
@@ -58,6 +60,7 @@
     "framer-motion": "^11.18.2",
     "gemini-api": "^2.0.4",
     "lucide-react": "^0.469.0",
+    "nanoid": "^5.1.2",
     "next": "^15.1.7",
     "next-themes": "^0.4.4",
     "nodemailer": "^6.10.0",
